Fix label covering issue

--- a/django_summernote/static/django_summernote/django_summernote.css
+++ b/django_summernote/static/django_summernote/django_summernote.css
@@ -1,3 +1,7 @@
 html, body {
-    margin: 0
+    margin: 0;
+}
+
+.note-editor {
+    display: inline-block;
 }
